# VGP

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PKGBUILD  README.md  SECURITY.md  TODO.md  meson.build  meson_options.txt  vgp.desktop
.github/: release.yml
.github/workflows/: build.yml  release.yml
data/: libvgp.pc.in  mimeapps.list  vgp-bar.desktop  vgp-edit.desktop  vgp-files.desktop  vgp-launcher.desktop  vgp-monitor.desktop  vgp-settings.desktop  vgp-term.desktop
data/completions/bash/: vgp
data/completions/fish/: vgp.fish
data/completions/zsh/: _vgp
data/metainfo/: io.github.theesfeld.vgp.bar.metainfo.xml  io.github.theesfeld.vgp.edit.metainfo.xml  io.github.theesfeld.vgp.files.metainfo.xml  io.github.theesfeld.vgp.launcher.metainfo.xml  io.github.theesfeld.vgp.metainfo.xml  io.github.theesfeld.vgp.monitor.metainfo.xml  io.github.theesfeld.vgp.settings.metainfo.xml  io.github.theesfeld.vgp.term.metainfo.xml
debian/: changelog  control  copyright  libvgp-dev.install  libvgp0.install  libvgp0.symbols  rules  vgp.install
docs/wiki/: Architecture.md  Configuration.md  FAQ.md  Home.md  Installation.md  Shaders.md  Themes.md  _Sidebar.md
include/nanovg/: fontstash.h  nanovg.c  nanovg.h  nanovg_gl.h  nanovg_gl_utils.h  stb_image.h  stb_truetype.h
include/vgp/: log.h  protocol.h  types.h  vgp.h  xdg.h
man/: vgp-bar.1.scd  vgp-edit.1.scd  vgp-files.1.scd  vgp-launcher.1.scd  vgp-monitor.1.scd  vgp-settings.1.scd  vgp-term.1.scd  vgp.1.scd  vgp.conf.5.scd
po/: LINGUAS  POTFILES.in  meson.build
rpm/: vgp.spec
src/libvgp/: vgp.c  xdg.c
src/libvgp-gfx/: vgp-gfx-3d.c  vgp-gfx-3d.h  vgp-gfx-widgets.c  vgp-gfx.c  vgp-gfx.h  vgp-hud.h  vgp-stroke-font.c  vgp-stroke-font.h
src/libvgp-ui/: config-writer.c  config-writer.h  vgp-ui.c  vgp-ui.h
src/server/: animation.c  animation.h  arena.c  arena.h  backend_cpu.c  backend_gpu.c  backend_gpu_internal.h  calendar.c  calendar.h  compositor.c  compositor.h  config.c  config.h  cursor.c  cursor.h  decoration.c  decoration.h  desktop.c  desktop.h  drm.c  drm.h  fbo_compose.c  fbo_compose.h  fbo_glass.c  fbo_glass.h  hotreload.c  hotreload.h  input.c  input.h  ipc.c  ipc.h  ipc_control.c  ipc_control.h  keybind.c  keybind.h  keyboard.c  keyboard.h  lockscreen.c  lockscreen.h  loop.c  (+36 more)
src/vgp-bar/: main.c
src/vgp-edit/: main.c
src/vgp-files/: main.c
src/vgp-launcher/: desktop.c  launcher.c  launcher.h  main.c  render.c
src/vgp-monitor/: main.c
src/vgp-settings/: main.c
src/vgp-term/: color.c  main.c  pty.c  render.c  term.c  term.h
src/vgp-view/: main.c
subprojects/: plutovg.wrap
themes/: default.toml
themes/shaders/: background.frag  clouds.frag  starfield.frag  titlebar_glow.frag
